--- a/src/index.css
+++ b/src/index.css
@@ -140,3 +140,11 @@ li span.active::before {
 	color: #444;
 	font-weight: bold;
 }
+
+.loader {
+	width: 10px;
+	height: 10px;
+	border-radius: 50%;
+	background: #fff;
+	margin: 40px auto;
+}
